--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-query": "^3.39.3",
+    "react-router": "^6.23.0",
+    "react-router-dom": "^6.23.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
